[package]
name = "jelly-lib"
version = "0.2.1"
edition = "2024"

[dependencies]
jelly-mem_access = { version="0.2.7", default-features=false }
nix = { version ="0.31.3", features = ["fs", "ioctl"], optional = true }
libc = { version = "0.2.155", optional = true }
libm = "0.2"

[features]
default = ["std"]
std = ["nix", "libc"]
