[package]
name = "jelly-lib"
version = "0.2.4"
authors = ["Ryuz <ryuz@rtc-lab.com>"]
edition = "2024"
repository = "https://github.com/ryuz/jelly-lib-rs.git"
keywords = ["jelly", "fpga"]
license = "MIT"

description = "A Rust library for the Jelly FPGA real-time computing development platform."

[dependencies]
jelly-mem_access = { version=">= 0.2, < 0.3", default-features=false }
nix = { version = ">= 0.28, < 0.31", features = ["fs", "ioctl"], optional = true }
libc = { version = ">= 0.2, < 0.3", optional = true }
libm = { version = ">= 0.1, < 0.3" }

[features]
default = ["std"]
std = ["nix", "libc"]
